--- a/angularapp/package.json
+++ b/angularapp/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
     "angularapp": "file:",
+    "bootstrap": "^5.3.5",
+    "jQuery": "^1.7.4",
     "karma-coverage": "2.2.0",
+    "popper.js": "^1.16.1",
     "puppeteer": "^19.7.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
