--- a/angularapp/package.json
+++ b/angularapp/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "angularapp": "file:",
+    "bootstrap": "^5.3.5",
     "karma-coverage": "2.2.0",
     "puppeteer": "^19.7.5",
     "rxjs": "~6.6.0",
