--- a/angularapp/package.json
+++ b/angularapp/package.json
@@ -12,21 +12,27 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.3",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.1.3",
-    "@angular/compiler": "~10.1.3",
+    "@angular/compiler": "^10.1.6",
     "@angular/core": "~10.1.3",
     "@angular/forms": "~10.1.3",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@types/bootstrap": "^5.2.10",
+    "@types/jquery": "^3.5.32",
     "angularapp": "file:",
     "bootstrap": "^5.3.5",
     "jQuery": "^1.7.4",
+    "jquery": "^3.7.1",
     "karma-coverage": "2.2.0",
     "popper.js": "^1.16.1",
     "puppeteer": "^19.7.5",
     "rxjs": "~6.6.0",
+    "symbol-observable": "^4.0.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
