--- a/angularapp/package.json
+++ b/angularapp/package.json
@@ -26,9 +26,11 @@
     "@types/jquery": "^3.5.32",
     "angularapp": "file:",
     "bootstrap": "^5.3.5",
+    "chart.js": "^2.9.4",
     "jQuery": "^1.7.4",
     "jquery": "^3.7.1",
     "karma-coverage": "2.2.0",
+    "ng2-charts": "^2.4.2",
     "popper.js": "^1.16.1",
     "puppeteer": "^19.7.5",
     "rxjs": "~6.6.0",
