--- a/angularapp/angular.json
+++ b/angularapp/angular.json
@@ -28,8 +28,14 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/chart.js/dist/Chart.min.js"
+
+            ],
+            "allowedCommonJsDependencies": [
+              "chart.js"
             ]
+
           },
           "configurations": {
             "production": {
@@ -93,7 +99,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+
+            ]
           }
         },
         "lint": {
