--- a/angularapp/package.json
+++ b/angularapp/package.json
@@ -22,12 +22,16 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "angularapp": "file:",
     "bootstrap": "^5.3.5",
+    "chart.js": "^2.9.4",
     "jQuery": "^1.7.4",
     "karma-coverage": "2.2.0",
+    "ng2-charts": "^2.4.2",
     "popper.js": "^1.16.1",
     "puppeteer": "^19.7.5",
+    "qrcode": "^1.5.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "uri-js": "^4.4.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -37,6 +41,7 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@types/qrcode": "^1.5.5",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
