--- a/.github/workflows/pom.xml
+++ b/.github/workflows/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.houari</groupId>
-    <artifactId>iamneo-production_7ec11ffd-91fa-42d5-b4dd-716cca2c3b08-50cf8477-2f7f-4834-bcf1-57d5472d194a</artifactId>
+    <artifactId>neojarvis-testing_7ec11ffd-91fa-42d5-b4dd-716cca2c3b08-50cf8477-2f7f-4834-bcf1-57d5472d194a</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <sonar.organization>iamneo-production</sonar.organization>
+        <sonar.organization>neojarvis-testing</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.sources>angularapp/src,springapp/src/main</sonar.sources>
         <sonar.java.binaries>target</sonar.java.binaries>
